--- a/omnibox/.env
+++ b/omnibox/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.wdrujqxpetjctimagwnt.supabase.co:5432/postgres"
+DATABASE_URL="postgresql://postgres:WRa8zyjWrdCgJwUA@db.wdrujqxpetjctimagwnt.supabase.co:5432/postgres"
