--- a/omnibox/.env
+++ b/omnibox/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:WRa8zyjWrdCgJwUA@db.wdrujqxpetjctimagwnt.supabase.co:5432/postgres"
+DATABASE_URL="postgresql://postgres.wdrujqxpetjctimagwnt:WRa8zyjWrdCgJwUA@aws-0-eu-central-1.pooler.supabase.com:6543/postgres?sslmode=require"
