--- a/omnibox/package.json
+++ b/omnibox/package.json
@@ -8,8 +8,17 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.9.0"
+  },
   "devDependencies": {
     "prettier": "^3.5.3",
+    "prisma": "^6.9.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.1",
     "turbo": "^2.5.4",
     "typescript": "5.8.2"
   },
