--- a/omnibox/apps/web/package.json
+++ b/omnibox/apps/web/package.json
@@ -11,10 +11,15 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.9.0",
     "@repo/ui": "workspace:*",
+    "@sendgrid/mail": "^8.1.5",
     "next": "^15.3.0",
+    "next-auth": "^4.24.11",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "resend": "^4.5.2"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
