chore(ts): add @/* path alias for web app

--- a/omnibox/apps/web/tsconfig.json
+++ b/omnibox/apps/web/tsconfig.json
@@ -5,7 +5,9 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": ".",                       // make paths relative to this folder
+    "paths": { "@/*": ["./*"] }           // allow "@/..." imports
   },
   "include": [
     "**/*.ts",
