--- a/omnibox/package.json
+++ b/omnibox/package.json
@@ -12,7 +12,8 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.9.0"
+    "@prisma/client": "^6.9.0",
+    "nodemailer": "^7.0.3"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
