--- a/omnibox/package.json
+++ b/omnibox/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
-    "nodemailer": "^7.0.3"
+    "@sendgrid/mail": "^8.1.5"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
