--- a/omnibox/apps/web/package.json
+++ b/omnibox/apps/web/package.json
@@ -19,7 +19,8 @@
     "next-auth": "^4.24.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "resend": "^4.5.2"
+    "resend": "^4.5.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
