--- a/omnibox/package.json
+++ b/omnibox/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
-    "@sendgrid/mail": "^8.1.5"
+    "@sendgrid/mail": "^8.1.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
