--- a/omnibox/apps/web/package.json
+++ b/omnibox/apps/web/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "resend": "^4.5.2",
+    "swr": "^2.3.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
