--- a/omnibox/package.json
+++ b/omnibox/package.json
@@ -17,6 +17,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/node": "^22.15.3",
     "prettier": "^3.5.3",
     "prisma": "^6.9.0",
     "ts-node": "^10.9.2",
