--- a/omnibox/apps/web/tsconfig.json
+++ b/omnibox/apps/web/tsconfig.json
@@ -2,12 +2,12 @@
   "extends": "@repo/typescript-config/nextjs.json",
   "compilerOptions": {
     "plugins": [
-      {
-        "name": "next"
-      }
+      { "name": "next" }
     ],
-    "baseUrl": ".",                       // make paths relative to this folder
-    "paths": { "@/*": ["./*"] }           // allow "@/..." imports
+    "baseUrl": ".",            
+    "paths": { "@/*": ["./*"] },
+
+    "types": ["node"]          
   },
   "include": [
     "**/*.ts",
@@ -16,7 +16,5 @@
     "next.config.js",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
