--- a/omnibox/package.json
+++ b/omnibox/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^6.9.0",
     "@sendgrid/mail": "^8.1.5",
+    "twilio": "^5.7.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
