--- a/omnibox/apps/web/package.json
+++ b/omnibox/apps/web/package.json
@@ -30,6 +30,10 @@
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "eslint": "^9.28.0",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "tailwindcss": "^4.1.10",
+    "postcss": "^8.5.5",
+    "autoprefixer": "^10.4.21",
+    "@tailwindcss/postcss": "^4.1.10"
   }
 }
