--- a/omnibox/apps/web/package.json
+++ b/omnibox/apps/web/package.json
@@ -31,9 +31,8 @@
     "@types/react-dom": "19.1.1",
     "eslint": "^9.28.0",
     "typescript": "5.8.2",
-    "tailwindcss": "^4.1.10",
+    "tailwindcss": "^3.4.4",
     "postcss": "^8.5.5",
-    "autoprefixer": "^10.4.21",
-    "@tailwindcss/postcss": "^4.1.10"
+    "autoprefixer": "^10.4.21"
   }
 }
