--- a/omnibox/apps/web/package.json
+++ b/omnibox/apps/web/package.json
@@ -26,15 +26,14 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@tailwindcss/postcss": "^4.1.10",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.28.0",
     "postcss": "^8.5.5",
-    "tailwind-scrollbar": "^4.0.2",
-    "tailwindcss": "^4.1.10",
+    "tailwind-scrollbar": "3.0.1",
+    "tailwindcss": "3.4.5",
     "typescript": "5.8.2"
   }
 }
