--- a/omnibox/apps/web/package.json
+++ b/omnibox/apps/web/package.json
@@ -11,6 +11,9 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.9.0",
     "@repo/ui": "workspace:*",
@@ -20,6 +23,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "resend": "^4.5.2",
+    "shadcn-ui-react": "^0.3.5",
     "swr": "^2.3.3",
     "zod": "^3.22.4"
   },
