--- a/omnibox/apps/web/package.json
+++ b/omnibox/apps/web/package.json
@@ -23,6 +23,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "resend": "^4.5.2",
+    "sonner": "1.0.0",
     "swr": "^2.3.3",
     "zod": "^3.22.4"
   },
