--- a/omnibox/apps/web/package.json
+++ b/omnibox/apps/web/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^6.9.0",
     "@repo/ui": "workspace:*",
     "@sendgrid/mail": "^8.1.5",
+    "lucide-react": "0.270.0",
     "next": "^15.3.0",
     "next-auth": "^4.24.11",
     "react": "^19.1.0",
@@ -25,6 +26,7 @@
     "resend": "^4.5.2",
     "sonner": "1.0.0",
     "swr": "^2.3.3",
+    "uuid": "^8.3.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
