--- a/omnibox/apps/web/package.json
+++ b/omnibox/apps/web/package.json
@@ -26,6 +26,7 @@
     "resend": "^4.5.2",
     "sonner": "1.0.0",
     "swr": "^2.3.3",
+    "@tanstack/react-query": "^5.52.0",
     "uuid": "^8.3.2",
     "zod": "^3.22.4"
   },
