--- a/omnibox/apps/web/package.json
+++ b/omnibox/apps/web/package.json
@@ -28,7 +28,8 @@
     "swr": "^2.3.3",
     "@tanstack/react-query": "^5.52.0",
     "uuid": "^8.3.2",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "pdf-lib": "^1.17.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
