--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,6 +1,6 @@
 ---
 deployment:
   tasks:
-    - "npm install"
-    - "npm run build"
-    - "cp -r build/. ./"
+    - npm install
+    - npm run build
+    - cp -r build/. ./
