--- a/omnibox/apps/web/package.json
+++ b/omnibox/apps/web/package.json
@@ -44,6 +44,7 @@
     "postcss": "^8.5.5",
     "tailwind-scrollbar": "3.0.1",
     "tailwindcss": "3.4.5",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "@types/uuid": "^10.0.0"
   }
 }
