--- a/omnibox/apps/web/tsconfig.json
+++ b/omnibox/apps/web/tsconfig.json
@@ -7,14 +7,15 @@
     "baseUrl": ".",            
     "paths": { "@/*": ["./*"] },
 
-    "types": ["node"]          
+    "types": ["node", "./types/sonner"]
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     "next-env.d.ts",
     "next.config.js",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "types/**/*.d.ts"
   ],
   "exclude": ["node_modules"]
 }
