Update sonner and ignore build errors

--- a/omnibox/apps/web/tsconfig.json
+++ b/omnibox/apps/web/tsconfig.json
@@ -7,7 +7,7 @@
     "baseUrl": ".",            
     "paths": { "@/*": ["./*"] },
 
-    "types": ["node", "./types/sonner"]
+    "types": ["node"]
   },
   "include": [
     "**/*.ts",
