--- a/omnibox/apps/web/package.json
+++ b/omnibox/apps/web/package.json
@@ -28,7 +28,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "resend": "^4.5.2",
-    "sonner": "1.0.0",
+    "sonner": "2.0.6",
     "swr": "^2.3.3",
     "uuid": "^8.3.2",
     "zod": "^3.22.4"
@@ -39,12 +39,12 @@
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.28.0",
     "postcss": "^8.5.5",
     "tailwind-scrollbar": "3.0.1",
     "tailwindcss": "3.4.5",
-    "typescript": "5.8.2",
-    "@types/uuid": "^10.0.0"
+    "typescript": "5.8.2"
   }
 }
